--- a/vignettes/install_packages.Rmd
+++ b/vignettes/install_packages.Rmd
@@ -8,31 +8,49 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## Knit this R Markdown
-Before class, make sure this RMD file knits, which installs and double checks for the required packages covered in class. [Just press the Knit button on top!] Installation of some packages will require 
+
+# Knit this R Markdown
+
+Before class, make sure this RMD file knits, which installs and double checks for the required packages covered in class. [Just press the Knit button on top!] Installation of some packages will require answering prompted questions, so run the document interactively prior to tryint to knit.  
+
+
+## Check R version
 ```{r}
 if (!(as.numeric(R.Version()$major) >= 3 & as.numeric(R.Version()$minor >= 5))) {
   error("please install latest version of R")
 }
+
+sessionInfo()
 ```
 
+## Try to install packages
 
 ```{r packages}
 installed_packages <- rownames(installed.packages())
-cran_req_packages <- c("Seurat", "BiocManager", "tidyverse", "devtools")
+
+cran_req_packages <- c("Seurat", 
+                       "BiocManager", 
+                       "tidyverse", 
+                       "devtools")
+
 bioc_req_packages <- c("M3Drop",
-                       "scRecover"
+                       "scRecover",
+                       "destiny",
+                       "slingshot",
+                       "fgsea"
                       )
+
 git_req_packages <- c("rnabioco/clustifyr",
                       "immunogenomics/harmony",
                       "quon-titative-biology/scAlign",
-                      "Zhangxf-ccnu/EnImpute",
+                      #"Zhangxf-ccnu/EnImpute", <- might be a pain to install
+                      "cole-trapnell-lab/monocle3"
                      )
 
 # here are the packages not yet installed
 cran_download <- setdiff(cran_req_packages, installed_packages)
-bioc_download <- setdiff(cran_req_packages, installed_packages)
-git_download <- setdiff(cran_req_packages, installed_packages)
+bioc_download <- setdiff(bioc_req_packages, installed_packages)
+git_download <- git_req_packages[!basename(git_req_packages) %in% installed_packages]
 
 # cran packages are installed with command `install.packages`
 for (pack in cran_download) {
@@ -50,10 +68,138 @@ for (pack in git_download) {
 }
 ```
 
-# check that everything loads correctly
+## check that R packages load correctly
+
 ```{r load}
-lapply(c(cran_req_packages, bioc_req_packages, git_req_packages), library, character.only = TRUE)
+lapply(c(cran_req_packages, 
+         bioc_req_packages, 
+         basename(git_req_packages)), 
+       library,
+       character.only = TRUE)
+
 sessionInfo()
 ```
 
+
+
+# Install python dependencies
+
+`Seurat` and `Monocle3` use the R package `reticulate` to call some python modules. Follow the instructions below to install these packages using reticulate.
+
+## Check python version
+
+```{r}
+library(reticulate)
+
+py_info <- py_discover_config()
+
+if (py_info$version < 3.5){
+  err <- c("please install at least python 3.5",
+           "If you do not have python3 installed",
+           "we recommend using conda to install python3",
+           "go to https://conda.io/en/latest/miniconda.html", 
+           "and install python 3.7 (64 bit) using the ",
+           ".pkg installer for MacOS, .exe for Windows, or bash installer for linux")
+  stop(paste0(err, sep = "\n"))
+}
+
+py_info
+```
+
+```{r}
+modules_fullname <- c("umap-learn", "louvain")
+modules_shortname <- c("umap", "louvain")
+
+modules_needed <- modules_fullname[!sapply( modules_shortname, py_module_available)]
+
+for(module in modules_needed) {
+  py_install(module)
+}
+
+```
+
+## Test python dependencies
+
+```{r}
+library(Seurat)
+data(pbmc_small)
+pbmc_small <- RunUMAP(object = pbmc_small, dims = 1:5)
+p <- DimPlot(pbmc_small, reduction = "umap")
+p
+```
+
+```{r}
+library(monocle3)
+dat <- load_a549()
+dat <-  preprocess_cds(dat, num_dim = 10)
+dat <- reduce_dimension(dat)
+
+res <- tryCatch(cluster_cells(dat), 
+                error=function(e) e, 
+                warning=function(w) w)
+
+if(is(res, "error")){
+  stop(dat$message, 
+       "\nerror with calling cluster_cells from Monocle")
+}
+```
+
+
+
+
+# Common issues with R package installs:
+
+## Missing xcode (or compilers):
+
+If you are on MacOS and get an error such as this:
+```
+xcode-select: note: no developer tools were found at '/Applications/Xcode.app', requesting install. Choose an option in the dialog to download the command line developer tools.
+ERROR: compilation failed for package 'XXX'
+```
+
+You need to download the command line tools for xcode. To do this open up the Terminal.app
+and execute:
+
+````
+xcode-select --install
+```
+
+Click install when prompted. 
+
+Alternatively RStudio may also prompt you to install these tools when you are trying to install the packages. 
+
+Restart R after install and try to install the packages again. 
+
+
+## Issues with installing the python packages
+
+## Try using pip
+
+In terminal execute:
+```
+pip install umap-learn
+pip install louvain
+```
+
+## Try using conda
+
+In terminal execute:
+```
+conda install -c conda-forge umap-learn
+conda install louvain
+```
+
+Double check that the version of python that `reticulate` is using is the same as the 
+one that you are installing the packages into. 
+
+```{r}
+library(reticulate)
+py_config()
+```
+
+
+```{r}
+# pip python version
+Sys.which("pip")
+```
 
