--- a/vignettes/install_packages.Rmd
+++ b/vignettes/install_packages.Rmd
@@ -25,8 +25,6 @@ sessionInfo()
 
 ## Try to install packages
 
-Note: Linux users may need to install libssl-dev, libcurl4-openssl-dev, and libxml2-dev (using apt, pacman, etc.) to successfully install these packages in R. Package names may differ by linux distribution.
-
 ```{r packages}
 options(pkgType="binary")
 installed_packages <- rownames(installed.packages())
@@ -34,8 +32,7 @@ installed_packages <- rownames(installed.packages())
 cran_req_packages <- c("Seurat", 
                        "BiocManager", 
                        "tidyverse", 
-                       "devtools"#,
-                       #"gsl"
+                       "devtools"
                        )
 
 bioc_req_packages <- c("M3Drop",
@@ -84,7 +81,6 @@ lapply(c(cran_req_packages,
 
 sessionInfo()
 ```
-
 
 
 # Install python dependencies
@@ -153,6 +149,11 @@ if(is(res, "error")){
 
 
 # Common issues with R package installs:
+
+## Required linux packages:
+
+Linux users may need to install libssl-dev, libcurl4-openssl-dev, libgsl-dev, and libxml2-dev (using apt, pacman, etc.) to successfully install these packages in R. Package names may differ by linux distribution.
+
 
 ## Missing xcode (or compilers):
 
