--- a/_vignettes/1_intro.Rmd
+++ b/_vignettes/1_intro.Rmd
@@ -1,13 +1,10 @@
 ---
-title: 'introduction to scRNAseq bioinformatics'
-date: '`r Sys.Date()`'
+title: 'Introduction to scRNAseq analysis'
+date: "August 12<sup>th</sup>, 2019"
 output:
   rmarkdown::html_vignette:
     toc: true
     toc_depth: 3
-    vignette: >
-      %\VignetteEngine{knitr::rmarkdown}
-      %\VignetteEncoding{UTF-8}
 ---
 
 ```{r "knitr options", echo = FALSE, message = FALSE, warning = FALSE}
@@ -16,24 +13,11 @@ knitr::opts_chunk$set(
   warning = FALSE,
   collapse = TRUE,
   echo = FALSE,
+  cache = FALSE,
   comment = "#>",
   fig.align = "center"
 )
 ```
-<style type="text/css">
-.main-container {
-  max-width: 2800px !important;
-  width: 2800px !important;
-  margin-left: 0px !important;
-  margin-right: 0px !important;
-}
-body {
-      max-width: 2800px !important;
-    }
-.table {
-    width: 100%;
-}
-</style>
 
 ## intro to RBI
 __rbi.fellows@ucdenver.edu__, 
@@ -43,6 +27,7 @@ RC1 South room 9101
 [office hours on Thursdays](https://rnabioco.github.io/rbi-project-summary/office-hours.html)
 
 ## outline of the workshop
+* Prereq: check all required packages are installed
 * Day 1 (pm):
   + Intro to scRNAseq
   + Data preprocessing
@@ -64,35 +49,23 @@ RC1 South room 9101
   + Miscellaneous
 
 * Day 3 (pm) : working through your own data
-
-## single cell RNA sequencing overview
-cells -> cDNA -> fastq -> gene expression matrix -> 
-
-&nbsp;&nbsp;&nbsp;&nbsp;filtering -> preprocessing -> dimension reduction -> clustering -> identity and markers -> pseudotime
+* Survey after the workshop for feedback
 
 ## limitations of scRNAseq
-```{r, fig.width=9, fig.height=3}
-# from seurat example
-library(Seurat)
-pbmc3k <- readRDS("/Users/rf/Downloads/pbmc3k_final.rds")
-a <- DimPlot(pbmc3k, label = T) + NoLegend()
-b <- FeaturePlot(pbmc3k, "CD4")
-c <- FeaturePlot(pbmc3k, "CD8B")
-cowplot::plot_grid(a,b,c, nrow = 1)
-```
+![from seurat pbmc example](1_intro_files2/cd4vs8.png){width=800px}
 
-1. dropout effect (see: GFP and other supposed markers)
+1. dropout effect, only a small portion of the mRNAs from each cell is captured (see: GFP and other supposed markers)
 
 2. low number of detectable genes, might not detect low expressing genes at all (see: TFs)
 
 3. little info outside of gene counts (see: tail-seq, isoform info)
 
-4. discrepancies between RNA and protein (see: CD4+ vs CD8+)
+4. discrepancies between RNA and protein, especially surface proteins (see: CD4+ vs CD8+)
 
 5. constantly evolving chemistry and bioinformatics tools (see: 10x v2/v3/v3.1, [bad cell calling in cellrangerV2](https://support.10xgenomics.com/single-cell-gene-expression/software/pipelines/latest/algorithms/overview#cell_calling))
 
 ## experimental design >> informatics corrections
-![cell isolation process for 10x](1_intro_files/10xV3_model.png){width=400px}
+![cell isolation process for 10x](1_intro_files2/10xV3_model.png){width=400px}
 
 1. too few or too many cells - 1000 cell lower limit for capture, and waste of money
 
@@ -104,16 +77,8 @@ cowplot::plot_grid(a,b,c, nrow = 1)
 
 4. lysed/free RNA - background for all cells, interferes with clustering and markers  
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(try: [SoupX](https://github.com/constantAmateur/SoupX))
-```{r, fig.width=9, fig.height=3}
-# from seurat example
-library(Seurat)
-pbmc_hem <- readRDS("/Users/rf/pbmcTSNE")
-pbmc_hem <- UpdateSeuratObject(object = pbmc_hem)
-a <- DimPlot(pbmc_hem, label = T) + NoLegend()
-b <- FeaturePlot(pbmc_hem, "HBB")
-c <- FeaturePlot(pbmc_hem, "JCHAIN")
-cowplot::plot_grid(a,b,c, nrow = 1)
-```
+
+![example data with lyzed red blood cells](1_intro_files2/contaminant.png){width=800px}
 
 5. different sex of mice in samples - makes sample comparisons harder  
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(try: ignore known sex-dependent genes)
@@ -123,7 +88,11 @@ cowplot::plot_grid(a,b,c, nrow = 1)
 
 7. n = ? - no consensus in the field, but aggregating 2 or more biological repeats, or hash multiple samples at the same time, should be valid
 
-## general pipeline and alternatives
+## single cell RNA sequencing overview
+cell suspension -> cDNA library -> fastq file -> gene expression matrix -> 
+
+&nbsp;&nbsp;&nbsp;&nbsp;filtering -> preprocessing -> dimension reduction -> clustering -> identity and markers -> pseudotime
+
 ### 1. sequencing methods
 main platforms: 10x vs Smart-seq2 vs sci-RNA-seq3
 
@@ -141,12 +110,12 @@ cat(tab)
 variations within 10x system: standard 3', 5' + V(D)J, hashing, CITE-seq, variant-calling (very different sample prep, may require up to 4 library preps per sample)
 
 ### 2. alignment pipelines
-cellranger (alternatives such as Alevin, STARsolo, kallisto)
+[cellranger](https://support.10xgenomics.com/single-cell-gene-expression/software/pipelines/latest/installation) (alternatives such as [Alevin](https://salmon.readthedocs.io/en/latest/alevin.html), [STARsolo](https://github.com/alexdobin/STAR/releases), [Kallisto](https://www.kallistobus.tools/))
 ```{r, engine = 'bash', eval = FALSE, echo = T}
 # in terminal
-cellranger count --id=sample345 \
+cellranger count --id=123 \
                  --transcriptome=/refdata-cellranger-GRCh38-3.0.0 \
-                 --fastqs=/home/runs/HAWT7ADXX/outs/fastq_path \
+                 --fastqs=/home/runs/HAT7ADXX/outs/fastq_path \
                  --sample=mysample
 ```
 ~ 5-8 hours per sample on biochem department cluster Bodhi
@@ -176,10 +145,10 @@ cellranger output [html](http://cf.10xgenomics.com/samples/cell-exp/3.1.0/5k_pbm
 9. GO term analysis and other things
 10. export to a hosted browser, similar to cloupe
 
-## reading UMI-barcode elbow plots
-![model of final 10x library](1_intro_files/10xV3_seq.png){width=400px}
+## reading and making UMI-barcode elbow plots
+![model of final 10x library](1_intro_files2/10xV3_seq.png){width=400px}
 
-The total UMI (unique molecular identifier - present each transcript) of a cell barcode is used to rank the barcodes determine the UMI threshold for signal vs noise. A plot is generated for cellranger html output, but can be useful in other situations like hashing and CITE-seq.
+The total UMI (unique molecular identifier - present each transcript) of a cell barcode is used to rank the barcodes determine the UMI threshold for signal vs noise. A plot is generated for cellranger html output, but can be useful in other situations like bashing and CITE-seq.
 
 for a standard scRNAseq run:
 
@@ -193,11 +162,20 @@ for a standard scRNAseq run:
   
 ```{r, fig.width=6, fig.height=3, echo = T}
 library(tidyverse)
-m1 <- readRDS("raw_matrix1.rds")
-m2 <- readRDS("raw_matrix2.rds")
+m1 <- readRDS("1_intro_files2/raw_matrix1.rds")
+m2 <- readRDS("1_intro_files2/raw_matrix2.rds")
 
-counts <- Matrix::colSums(m1)
-countdf <- as.data.frame(counts) %>% as_tibble(rownames = "barcode") %>% filter(counts >= 1) %>% arrange(desc(counts)) %>% mutate(n = 1:n())
+# gene x barcodes
+print(dim(m1))
+print(dim(m2))
+
+counts <- Matrix::colSums(m1) # calculate total UMI read number for each cell barcode
+countdf <- as.data.frame(counts) %>% 
+  as_tibble(rownames = "barcode") %>% 
+  filter(counts >= 2) %>% # throw out cell barcodes with 1 or less UMI, this is mainly for time purposes
+  arrange(desc(counts)) %>% # arrange by descending order
+  mutate(n = 1:n()) # rank
+
 g1 <- ggplot(countdf, aes(x = n, y = counts)) +
   geom_point() +
   labs(x = "barcodes", y = "UMI_counts") +
@@ -205,9 +183,14 @@ g1 <- ggplot(countdf, aes(x = n, y = counts)) +
   scale_x_log10() + 
   scale_y_log10()
 
-counts <- Matrix::colSums(m2)
-countdf <- as.data.frame(counts) %>% as_tibble(rownames = "barcode") %>% filter(counts >= 1) %>% arrange(desc(counts)) %>% mutate(n = 1:n())
-g2 <- ggplot(countdf, aes(x = n, y = counts)) +
+counts2 <- Matrix::colSums(m2)
+countdf2 <- as.data.frame(counts2) %>%
+  as_tibble(rownames = "barcode") %>% 
+  filter(counts2 >= 2) %>%
+  arrange(desc(counts2)) %>%
+  mutate(n = 1:n())
+
+g2 <- ggplot(countdf2, aes(x = n, y = counts2)) +
   geom_point() +
   labs(x = "barcodes", y = "UMI_counts") +
   theme_classic() +
@@ -226,38 +209,45 @@ A large amount of code introduced in this workshop in based on matrix and datafr
 
 Also, "%>%" is used as "pipe", similar to unix `|`.
 ```{r}
+# we will look at metadata from pbmc_small from Seurat
+library(Seurat)
 library(tidyverse)
-#note that tidyverse is philosophically against rownames
-meta <- pbmc3k@meta.data %>% as_tibble(rownames = "cell_id")
+# note that tidyverse is philosophically against rownames
+
+meta <- pbmc_small@meta.data %>% as_tibble(rownames = "cell_id")
 meta %>% head() %>% print() # <- same as print(head(meta))
 ```
 
 ```{r, echo = T}
-#"select" certain columns of data.
-meta2 <- meta %>% select(cell_id, nCount_RNA, percent.mt, seurat_clusters)
+# "select" certain columns of data
+meta2 <- meta %>% select(cell_id, nCount_RNA, RNA_snn_res.0.8, letter.idents)
 meta2 %>% head() %>% print()
 ```
 
 ```{r, echo = T}
-#"filter" data to select specific rows.
-meta2 %>% filter(percent.mt <= 2) %>% head() %>% print()
+# "filter" data to select specific rows
+meta2 %>% filter(nCount_RNA >= 71, letter.idents == "A") %>% head() %>% print()
 ```
 
 ```{r, echo = T}
-#"arrange" the rows of your data into an order.
-meta2 %>% filter(percent.mt <= 2) %>% arrange(percent.mt) %>% head() %>% print()
+# "arrange" the rows of your data into an order
+meta2 %>% arrange(nCount_RNA) %>% head() %>% print()
 ```
 
 ```{r, echo = T}
-#"mutate" your data frame to contain new columns.
-meta3 <- meta2 %>% mutate(serurat_clusters = str_c("cluster_", seurat_clusters), mt = percent.mt/100)
+# "mutate" your data frame to contain new columns
+meta3 <- meta2 %>% mutate(seurat_clusters = str_c("cluster_", letter.idents), 
+                          nCount_RNA_norm = nCount_RNA/max(nCount_RNA))
 meta3 %>% head() %>% print()
 ```
 
 ```{r, echo = T}
-#"summarise" chunks of you data in some way.
+# "summarise" chunks of you data (by group) in some way.
 meta3 %>% group_by(seurat_clusters) %>% summarize(n = n()) %>% head() %>% print()
 ```
 
-links
-reading material
+## reading material
+1. [Single-cell RNA sequencing technologies and bioinformatics pipelines](https://www.nature.com/articles/s12276-018-0071-8)
+2. [Current best practices in single‐cell RNA‐seq analysis: a tutorial](https://www.embopress.org/doi/10.15252/msb.20188746)
+3. ["Analysis of single cell RNA-seq data" course](https://scrnaseq-course.cog.sanger.ac.uk/website/index.html)
+4. [Introduction to dplyr](https://dplyr.tidyverse.org/articles/dplyr.html)
